# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "ellipse-bin"
description = "Command that truncates and ellipses strings in a human-friendly way"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"

[[bin]]
path = "src/main.rs"
name = "ellipse"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
ellipse = "0.2"
